Building out prototype with minimal functionality

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+body{
+  background: rgb(57,209,255);
+  background: linear-gradient(90deg, rgba(57,209,255,1) 35%, rgba(66,234,205,1) 100%);
+}
