--- a/src/components/Email/EmailAddress.module.css
+++ b/src/components/Email/EmailAddress.module.css
@@ -1,13 +1,12 @@
-.btn {
+.address {
   background: radial-gradient(circle farthest-side, #ffdd68, #ffc900);
   background-repeat: no-repeat;
-  padding: 1rem;
+  padding: 0.2rem;
   color: white;
-  padding: 10px 30px;
   border: none;
-  border-radius: 100px 100px 100px 100px;
-}
-
-.btn:hover {
-  cursor: pointer;
+  width: 10em;
+  margin: 0.5%;
+  font-size: 0.5rem;
+  display: inline-flex;
+  flex-wrap: wrap;
 }
